--- a/src/app/work/projects/Fuzzy-Monotonic-LightGBM-for-Explainable-Credit-Default-Prediction.mdx
+++ b/src/app/work/projects/Fuzzy-Monotonic-LightGBM-for-Explainable-Credit-Default-Prediction.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Fuzzy-Monotonic LightGBM for Explainable Credit Default Prediction"
-publishedAt: "2024-11-30"
+publishedAt: "30-11-2025"
 summary: "A hybrid explainable AI framework combining fuzzy linguistic reasoning with monotonic gradient boosting for regulatory-compliant credit default prediction."
 images:
-
+  - "/images/projects/fuzzy-mono/fuzzy-mono-main.png"
 team:
   - name: "Utkarsh Dubey"
     role: "Lead Researcher"
