Feat : Added new project and blog on "Adobe add-on Hackathon" and fixed minor syntax issues

--- a/src/app/blog/posts/fuzzy-monotonic-lightgbm-blog.mdx
+++ b/src/app/blog/posts/fuzzy-monotonic-lightgbm-blog.mdx
@@ -6,27 +6,27 @@ image: "/images/projects/fuzzy-mono/fuzzy-mono-main.png"
 tag: "Machine Learning"
 ---
 
-## The Challenge:  When Black Boxes Meet Regulators
+## The Challenge: When Black Boxes Meet Regulators
 
-In the world of credit risk modeling, there's a fundamental tension:  **machine learning models are powerful but opaque**, while **regulators demand transparency and economic consistency**. After months of research and experimentation, I built a hybrid framework that doesn't compromise on either front.
+In the world of credit risk modeling, there's a fundamental tension: **machine learning models are powerful but opaque**, while **regulators demand transparency and economic consistency**. After months of research and experimentation, I built a hybrid framework that doesn't compromise on either front.
 
-This journey taught me that the best AI systems aren't always the ones with the highest accuracy—they're the ones that stakeholders can trust, understand, and regulate. 
+This journey taught me that the best AI systems aren't always the ones with the highest accuracy—they're the ones that stakeholders can trust, understand, and regulate.
 
 ## The Core Innovation: Three Layers of Intelligence
 
 ### 1. Behavioral Feature Engineering
 
-The first lesson was humbling: **domain knowledge beats clever algorithms**. Instead of feeding raw transaction data to the model, I engineered features that capture human financial behavior: 
+The first lesson was humbling: **domain knowledge beats clever algorithms**. Instead of feeding raw transaction data to the model, I engineered features that capture human financial behavior:
 
-- **Credit Utilization**:  How much of your limit you're actually using
+- **Credit Utilization**: How much of your limit you're actually using
 - **Repayment Discipline**: Your track record of paying bills on time
-- **Payment Trends**: Are you improving or deteriorating? 
+- **Payment Trends**: Are you improving or deteriorating?
 
-These features resonated with credit analysts because they mirror how humans assess risk.  The model wasn't just crunching numbers—it was understanding financial behavior.
+These features resonated with credit analysts because they mirror how humans assess risk. The model wasn't just crunching numbers—it was understanding financial behavior.
 
 ### 2. Fuzzy Linguistic Layer
 
-Here's where things got interesting. Traditional models output raw probabilities:  "This applicant has a 0.67 default probability." But what does that mean to a loan officer?
+Here's where things got interesting. Traditional models output raw probabilities: "This applicant has a 0.67 default probability." But what does that mean to a loan officer?
 
 I implemented fuzzy membership functions that translate numerical features into linguistic terms:
 
@@ -42,29 +42,27 @@ THEN risk=High (confidence: 0.87)
 
 ### 3. Monotonic Economic Constraints
 
-This was the game-changer for regulatory compliance.  I enforced hard constraints based on economic theory:
+This was the game-changer for regulatory compliance. I enforced hard constraints based on economic theory:
 
 - ↑ Credit Limit → ↓ Default Risk (stronger borrowers get higher limits)
 - ↑ Age → ↓ Default Risk (stability increases with age)
 - ↑ Recent Delinquency → ↑ Default Risk (obvious but critical)
 
-LightGBM's monotonic constraint feature ensured the model could never violate these relationships, even when chasing accuracy.  **Basel II/III compliance?  Check.  IFRS-9 alignment? Check.**
+LightGBM's monotonic constraint feature ensured the model could never violate these relationships, even when chasing accuracy. **Basel II/III compliance? Check. IFRS-9 alignment? Check.**
 
 ## The Numbers That Matter
 
-| Metric           | Traditional Model | Fuzzy-Monotonic |
-| ---------------- | ----------------- | --------------- |
-| **PR-AUC**       | 0.5477            | **0.5498** ↑    |
-| **Brier Score**  | 0.1725            | **0.1696** ↓    |
-| **ROC-AUC**      | 0.7744            | 0.7700          |
+- **PR-AUC**: 0.5477 (Traditional) → **0.5498** (Fuzzy-Monotonic) ↑
+- **Brier Score**: 0.1725 (Traditional) → **0.1696** (Fuzzy-Monotonic) ↓
+- **ROC-AUC**: 0.7744 (Traditional) → 0.7700 (Fuzzy-Monotonic)
 
-Notice the PR-AUC improvement?  That's the minority class (actual defaults) being detected more reliably.  The slight ROC-AUC dip? **Acceptable**, because we gained calibration quality and regulatory trust.
+Notice the PR-AUC improvement? That's the minority class (actual defaults) being detected more reliably. The slight ROC-AUC dip? **Acceptable**, because we gained calibration quality and regulatory trust.
 
 ## Technical Deep-Dives Worth Sharing
 
 ### Calibration Over Discrimination
 
-Most credit models obsess over ROC-AUC. I learned to care more about **Brier scores** (probability calibration). Why? Because telling a customer "You have an 80% approval chance" needs to be accurate 80% of the time. 
+Most credit models obsess over ROC-AUC. I learned to care more about **Brier scores** (probability calibration). Why? Because telling a customer "You have an 80% approval chance" needs to be accurate 80% of the time.
 
 ```python
 # Calibration plot showed our probabilities were reliable
@@ -74,14 +72,14 @@ Most credit models obsess over ROC-AUC. I learned to care more about **Brier sco
 
 ### The SHAP + Fuzzy Combo
 
-SHAP values showed *which* features mattered.  Fuzzy rules showed *why* they mattered in human terms. Together, they created a two-tier explanation: 
+SHAP values showed _which_ features mattered. Fuzzy rules showed _why_ they mattered in human terms. Together, they created a two-tier explanation:
 
-1. **Global**:  "Age and utilization are the top risk drivers" (SHAP)
+1. **Global**: "Age and utilization are the top risk drivers" (SHAP)
 2. **Local**: "Your high utilization (85%) triggered risk rule #7" (Fuzzy)
 
 ### Handling Imbalanced Data Right
 
-With 22% default rate, I used: 
+With 22% default rate, I used:
 
 - **Stratified splits** (preserving class distribution)
 - **Class-balanced LightGBM** (`is_unbalance=True`)
@@ -91,19 +89,19 @@ With 22% default rate, I used:
 
 ### 1. Overengineering Fuzzy Rules
 
-My first version had 27 fuzzy rules. Too many!  Simplified to 12 critical rules that covered 95% of risk scenarios.  **Less is more when explaining to non-technical stakeholders.**
+My first version had 27 fuzzy rules. Too many! Simplified to 12 critical rules that covered 95% of risk scenarios. **Less is more when explaining to non-technical stakeholders.**
 
 ### 2. Monotonic Constraints on Everything
 
-I initially constrained all 20 features.  Bad idea—some relationships are genuinely non-linear (e.g., education level). Only enforce constraints where economic theory is crystal clear.
+I initially constrained all 20 features. Bad idea—some relationships are genuinely non-linear (e.g., education level). Only enforce constraints where economic theory is crystal clear.
 
 ### 3. Ignoring Calibration Early
 
-Built a beautiful 0.78 ROC-AUC model that predicted 30% default probabilities for groups with 10% actual defaults. Useless for decision-making.  **Calibration plots should be in your first 10 lines of evaluation code.**
+Built a beautiful 0.78 ROC-AUC model that predicted 30% default probabilities for groups with 10% actual defaults. Useless for decision-making. **Calibration plots should be in your first 10 lines of evaluation code.**
 
 ## Real-World Impact Potential
 
-This framework isn't just academic: 
+This framework isn't just academic:
 
 - **Financial Institutions**: Deploy regulator-friendly models without sacrificing performance
 - **Emerging Markets**: Transparent models build trust where credit histories are sparse
@@ -112,15 +110,15 @@ This framework isn't just academic:
 ## Tools That Made It Possible
 
 - **LightGBM**: Monotonic constraints + GPU training = game changer
-- **SHAP**:  TreeExplainer made 30,000-sample explanations feasible
+- **SHAP**: TreeExplainer made 30,000-sample explanations feasible
 - **Pandas + NumPy**: Feature engineering heaven
 - **LaTeX**: Because research deserves beautiful documentation
 
 ## The Bigger Picture
 
-This project taught me that **AI ethics isn't just about bias detection—it's about building transparency into the architecture itself**.  Fuzzy rules and monotonic constraints aren't post-hoc explanations; they're structural guarantees.
+This project taught me that **AI ethics isn't just about bias detection—it's about building transparency into the architecture itself**. Fuzzy rules and monotonic constraints aren't post-hoc explanations; they're structural guarantees.
 
-When a loan applicant asks "Why was I rejected? ", I can now provide: 
+When a loan applicant asks "Why was I rejected? ", I can now provide:
 
 1. The fuzzy rule that triggered (linguistic transparency)
 2. The monotonic relationship violated (economic consistency)
@@ -130,7 +128,7 @@ That's not just explainable AI—it's **trustworthy AI**.
 
 ## What's Next?
 
-Current explorations: 
+Current explorations:
 
 - **Automated monotonic prior discovery** from domain expert interviews
 - **Uncertainty quantification** for probability estimates (Bayesian extensions)
@@ -142,7 +140,7 @@ Current explorations:
 2. **Constraints aren't limitations**: Monotonic constraints improved calibration without sacrificing accuracy
 3. **Speak your audience's language**: Fuzzy linguistic variables bridged ML and business teams
 4. **Calibration matters**: A 0.70 ROC-AUC with good calibration beats 0.75 with poor calibration
-5. **Regulatory compliance is a feature**:  Design for it from day one, not as an afterthought
+5. **Regulatory compliance is a feature**: Design for it from day one, not as an afterthought
 
 ---
 
@@ -150,4 +148,4 @@ Current explorations:
 **Research Paper**: [Read Full Paper](https://drive.google.com/file/d/1wVfmxoemUydJ5hr7wm3aLlFd95IgJVxS/view?usp=sharing)  
 **Tech Stack**: Python, LightGBM, SHAP, scikit-learn, LaTeX
 
-*Built with ❤️ for transparent and responsible AI in financial services*
+_Built with ❤️ for transparent and responsible AI in financial services_
