--- a/src/app/blog/posts/laptop-price-predictor-blog.mdx
+++ b/src/app/blog/posts/laptop-price-predictor-blog.mdx
@@ -3,7 +3,7 @@ title: "Laptop Price Predictor"
 publishedAt: "2025-03-15"
 summary: "The complete journey of turning a regression model into an interactive web application. Learn about feature engineering, model selection, deployment strategies, and making ML accessible to non-technical users."
 image: "/images/projects/project-01/laptop-predictor-1.png"
-
+tag: "Machine Learning"
 ---
 
 ## The Problem:  Laptop Shopping is Confusing
